Bug 51269 - Copying controls in Basic dialog broken and leads to crash
Summary: Copying controls in Basic dialog broken and leads to crash
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other Linux (All)
: medium major
Assignee: Noel Power
URL:
Whiteboard: target:3.7.0 target:3.6.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-20 11:52 UTC by Cor Nouws
Modified: 2012-11-23 22:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-06-20 11:52:26 UTC
- Open Basic
- create a dialog
- add three controls (maybe two will do)
- copy (Ctrl-C) one of the controls and paste it (Ctrl-V) 
- now select and copy (Ctrl-C) another control and paste it (Ctrl-V) 
  > another copy of the first copied control is pasted!

- try to copy the second control by the context menu > Copy
  > Crash

Problem for the first time present in 3.4.0 (and prolly one/all of the betas)
Comment 1 Noel Power 2012-07-05 12:21:32 UTC
crasher, my area
Comment 2 Not Assigned 2012-07-06 03:18:44 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=60465d0608930500b35127c47946a9908354d7f4

fix dialog editor crasher fdo#51269
Comment 3 Not Assigned 2012-07-06 03:19:12 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eae1d5d9664bb6ab9fedcf573bdfe6640b22fe4d&g=libreoffice-3-6

fix dialog editor crasher fdo#51269


It will be available in LibreOffice 3.6.
Comment 4 Cor Nouws 2012-07-06 03:44:48 UTC
thank you Noel :-)
Comment 5 Cor Nouws 2012-11-23 22:00:36 UTC
Is OK in 3.6.x and 4.0 alpha1 > fixed
Comment 6 Cor Nouws 2012-11-23 22:04:41 UTC
& closed