fix dialog editor crasher fdo#51269

missing clone of AllDialogChildren property was the culprit here.

Change-Id: I6c5ee105003967429d5bf79639ae75fb7d90562a